--- a/bimdev-revitapi-library-main/RevitCommand/RevitCommand.csproj
+++ b/bimdev-revitapi-library-main/RevitCommand/RevitCommand.csproj
@@ -53,6 +53,7 @@
 		<None Remove="Library\Image\top-arrow.png" />
 		<None Remove="Library\Image\unpinned.png" />
 		<None Remove="Library\Image\view.png" />
+		<None Remove="Library\Model\Style\MultiComboBox.xaml" />
 	</ItemGroup>
 	<ItemGroup>
 		<Resource Include="Library\Image\addsub.png">
@@ -172,6 +173,7 @@
 		<Reference Include="Microsoft.CSharp" />
 		<Reference Include="PresentationCore" />
 		<Reference Include="PresentationFramework" />
+		<Reference Include="PresentationFramework.Aero, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
 		<Reference Include="System.ComponentModel.Composition" />
 		<Reference Include="System.Data.DataSetExtensions" />
 		<Reference Include="System.IO" />
@@ -253,6 +255,11 @@
 		<Page Include="Library\Model\Style\ListView.xaml">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 			<Generator>XamlIntelliSenseFileGenerator</Generator>
+		</Page>
+		<Page Include="Library\Model\Style\MultiComboBox.xaml">
+		  <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		  <SubType>Designer</SubType>
+		  <Generator>XamlIntelliSenseFileGenerator</Generator>
 		</Page>
 		<Page Include="Library\Model\Style\RadioButton.xaml">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
